--- a/frontend/src/root.scss
+++ b/frontend/src/root.scss
@@ -19,13 +19,13 @@ $font_dark: $bg_inverse;
 $font_blue: #337ab7;
 $font_link_dark: #bfcbd9;
 $font_light: #6E728E;
-$font_lighter: lighten($font_light, 5%);
+$font_lighter: lighten($font_light, 10%);
 
 // element UI
 $ele_font_blue: #20a0ff;
 
 $font: #2D2D2D;
-$font-light: #606266;
+$font-light: #6c7483;
 $font-lighter: #c0c4cc;
 
 $line: #e5e5e5;
